# AC_SensorModels

./: .gitignore  CMakeLists.txt  README.md  build.bat
data/sensors/: ac_pitch.xml  altimeter.xml  anemometer.xml  gps.xml  variometer.xml
src/: ac_sensormodelsconfig.h.in  framework.cpp  framework.cpp~RFa53b9f.TMP  framework.h  main.cpp  timer.cpp  timer.h
src/sensors/: altimeter.cpp  altimeter.h  sensor.cpp  sensor.h
